# wsh

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  makefile
core/: CMakeLists.txt  main.c  wsh_builtin.c  wsh_command.c  wsh_execute.c  wsh_input.c  wsh_parse.c  wsh_read.c
include/: wsh_builtin.h  wsh_command.h  wsh_execute.h  wsh_input.h  wsh_parse.h  wsh_read.h  wsh_status.h
platform/: CMakeLists.txt  platform.c  platform.h  wsh_posix.c  wsh_windows.c
platform/posix/: wsh_posix.c  wsh_posix.h
platform/windows/: wsh_windows.h
util/: CMakeLists.txt  hashtable.c  hashtable.h
